--- a/public/Plataforma/css/login.css
+++ b/public/Plataforma/css/login.css
@@ -1,20 +1,7 @@
 body {
-    background-image: url('http://rh-destinations.com/es/wp-content/uploads/sites/6/2017/06/CiudadMexico.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
+    background-color: #1e2327;
 }
 
-.blurred {
-    z-index: 10;
-    display: block;
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    background-color: #000046;
-    opacity: .8;
-}
 
 .center {
     opacity: 1;
