--- a/public/Plataforma/css/style.css
+++ b/public/Plataforma/css/style.css
@@ -9,3 +9,22 @@
 .uva-margin-top {
     margin-top: 20px;
 }
+
+.dark-blue-gradient {
+    background: linear-gradient(to left, #28a5f5, #1e87f0);
+}
+
+.dark-purple-gradient {
+    background: linear-gradient(to left, #C6426E, #642B73);
+}
+
+.purple-gradient {
+    background: linear-gradient(to left, #d194ff, #9389ff);
+}
+.blue-gradient {
+    background: linear-gradient(to left, #7cbfee, #00d0b8);
+}
+.orange-gradient {
+    background: linear-gradient(to left, #ff77a7, #ff7b7e);
+}
+
