Updated simple-event page to work with new drop image area

--- a/public/Plataforma/css/style.css
+++ b/public/Plataforma/css/style.css
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .uva-margin {
@@ -36,3 +36,25 @@ body {
     background: linear-gradient(to left, #ff77a7, #ff7b7e);
 }
 
+.background-white {
+    background: whitesmoke;
+}
+
+.drop-area {
+    min-height: 50px;
+    min-width: 60px;
+    display: block;
+    background: white;
+    border: 2px dashed rgba(30, 135, 240, 0.3);
+    color: #28a5f5;
+    text-align: center;
+    vertical-align: middle;
+
+}
+
+.drop-area .content {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
